--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.79.4",
-    "sass-loader": "^16.0.2",
+    "sass-loader": "10",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
